--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+    <h1>hi im nuclear.</h1>
+    <p>here are my socials.</p>
+    <div class="socials">
+        <a href="https://www.youtube.com/@NuclearGotBeamed" target="_blank">
+            <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg" alt="YouTube">
+        </a>
+    </div>
+</div>
 <script src="scripts.js"></script>
 </body>
 </html>
