--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div id="app">
-    <h1>hi im nuclear.</h1>
-    <p>here are my socials.</p>
+    <h1>hi im nuclear</h1>
+    <p>here are my socials</p>
     <div class="socials">
         <a href="https://www.youtube.com/@NuclearGotBeamed" target="_blank">
             <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg" alt="YouTube">
